Fix unwanted scrollbar in the Kanban Task dialog

--- a/src/windows/Project/Kanban/TaskDialog/TaskDialog.module.scss
+++ b/src/windows/Project/Kanban/TaskDialog/TaskDialog.module.scss
@@ -40,3 +40,7 @@
 .descriptionEditor {
   margin-top: 10px;
 }
+
+.descriptionPreview {
+  width: auto !important;
+}
